src/tests/JSXOutsideRender/valid/case#6/index.jsx
// Arquivo: ExemploReactSemJSXForaRender6.js

import React from 'react';

const App = () => {
    const titulo = "Exemplo sem JSX fora do render";

    return (
        <div>
            <h1>{titulo}</h1>
            <p>Outro exemplo seguindo as restrições especificadas.</p>
        </div>
    );
};

export default App;
